use getDeclaredConstructor().newInstance instead of newInstance for proper exception handling